--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/lodash": "^4.14.172",
     "apollo-server-express": "2.x.x",
     "graphql": "^15.5.1",
+    "lodash": "^4.17.21",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
